--- a/src/scss/instantsearch.scss
+++ b/src/scss/instantsearch.scss
@@ -178,7 +178,7 @@
     padding-left: 1.5rem;
     position: relative;
     display: block;
-    margin-bottom: var(--wp--preset--spacing--20);
+    margin-bottom: var(--wp--preset--spacing--30);
   }
 
   .ais-Menu-link,
@@ -271,7 +271,7 @@
   .ais-RefinementList-count {
     margin: 0;
     background-color: var(--wp--preset--color--contrast-lower);
-    padding: var(--wp--preset--spacing--10) var(--wp--preset--spacing--20);
+    padding: var(--wp--preset--spacing--20) var(--wp--preset--spacing--30);
     font-size: var(--wp--preset--font-size--xs);
     border-radius: 20rem;
     vertical-align: middle;
