--- a/src/scss/theme/_autocomplete.scss
+++ b/src/scss/theme/_autocomplete.scss
@@ -52,7 +52,7 @@
         background-color: transparent;
         color: var(--wp--preset--color--contrast-high);
         border: 2px solid var(--wp--preset--color--contrast-low);
-        padding: var(--wp--preset--spacing--10) var(--wp--preset--spacing--30);
+        padding: var(--wp--preset--spacing--20) var(--wp--preset--spacing--30);
       }
     }
 
